--- a/index.html
+++ b/index.html
@@ -6,27 +6,43 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1E3A8A" />
-    <meta name="description" content="Quick Bills - Fast and secure bill payments in Nigeria" />
-    <title>Quick Bills - Pay Bills Easily</title>
-    
+    <meta
+      name="description"
+      content="Shaban express - Fast and secure bill payments in Nigeria"
+    />
+    <title>Shaban express - Pay Bills Easily</title>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://quickbills.com/" />
-    <meta property="og:title" content="Quick Bills - Pay Bills Easily" />
-    <meta property="og:description" content="Fast and secure bill payments in Nigeria" />
+    <meta property="og:url" content="https://ShabanExpress.com/" />
+    <meta property="og:title" content="Shaban express - Pay Bills Easily" />
+    <meta
+      property="og:description"
+      content="Fast and secure bill payments in Nigeria"
+    />
     <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://quickbills.com/" />
-    <meta property="twitter:title" content="Quick Bills - Pay Bills Easily" />
-    <meta property="twitter:description" content="Fast and secure bill payments in Nigeria" />
+    <meta property="twitter:url" content="https://ShabanExpress.com/" />
+    <meta
+      property="twitter:title"
+      content="Shaban express - Pay Bills Easily"
+    />
+    <meta
+      property="twitter:description"
+      content="Fast and secure bill payments in Nigeria"
+    />
     <meta property="twitter:image" content="/og-image.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://js.paystack.co/v1/inline.js"></script>
   </head>
   <body>
     <div id="root"></div>
